--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
    "dev": "nodemon Backend/index.js",
-  "start": "node Backend/index.js",
-  "build": "npm install --prefix Backend/chatapp && npm run build --prefix Backend/chatapp"
+    "start": "node Backend/index.js",
+    "build": "npm install --prefix chatapp && npm run build --prefix chatapp"
   },
   "author": "",
   "license": "ISC",
