--- a/chatapp/package.json
+++ b/chatapp/package.json
@@ -19,7 +19,8 @@
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.13",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "vite": "^6.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -30,7 +31,6 @@
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "globals": "^15.15.0"
   }
 }
